set(FOLDER_NAME Examples)
add_subdirectory(common)
add_subdirectory(core_example1)
add_subdirectory(framework_example1)
add_subdirectory(framework_example2)
add_subdirectory(framework_example3)
add_subdirectory(framework_example4)
add_subdirectory(sdk_example1)
add_subdirectory(sdk_example2)
add_subdirectory(sdk_example3)
add_subdirectory(cmp_prototype)
add_subdirectory(cmp_plugins)
